# KanoopGuiQt

./: .gitignore  CLAUDE.md  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: ci.yaml
docs/: mainpage.md
docs/html/: abstractitemmodel_8h_source.html  abstractlistmodel_8h_source.html  abstractmodelitem_8h_source.html  abstracttablemodel_8h_source.html  abstracttreemodel_8h_source.html  accordionwidget_8h_source.html  annotated.html  annotated_dup.js  application_8h_source.html  buttonlabel_8h_source.html  checkbox_8h_source.html  classAbstractItemModel-members.html  classAbstractItemModel.html  classAbstractItemModel.js  classAbstractListModel-members.html  classAbstractListModel.html  classAbstractListModel.js  classAbstractModelItem-members.html  classAbstractModelItem.html  classAbstractModelItem.js  classAbstractModelItem_1_1List-members.html  classAbstractModelItem_1_1List.html  classAbstractModelItem_1_1List.js  classAbstractTableModel-members.html  classAbstractTableModel.html  classAbstractTableModel.js  classAbstractTreeModel-members.html  classAbstractTreeModel.html  classAbstractTreeModel.js  classAccordionWidget-members.html  classAccordionWidget.html  classAccordionWidget.js  classApplication-members.html  classApplication.html  classApplication.js  classButtonLabel-members.html  classButtonLabel.html  classButtonLabel.js  classCheckBox-members.html  (+282 more)
tests/: CMakeLists.txt  tst_abstractmodelitem.cpp  tst_headerstate.cpp  tst_palette.cpp  tst_quaternion.cpp  tst_resources.cpp  tst_stylesheets.cpp  tst_tableheader.cpp  tst_vector3d.cpp
(+223 files in other folders)
